FIX: `flex-direction: column` breaks the rich text editor

--- a/scss/mobile/fkb-m-composer.scss
+++ b/scss/mobile/fkb-m-composer.scss
@@ -9,7 +9,3 @@
     }
   }
 }
-
-.d-editor-container {
-  flex-direction: column;
-}
